[package]
name = "redis"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.177"

[dev-dependencies]
serial_test = "3.2.0"
criterion = "0.8.0"

[[bench]]
name = "ziplist_benches"
harness = false

[[bin]]
name = "server"
path = "src/server_binary.rs"

[[bin]]
name = "client"
path = "src/client.rs"
